fix checkbox item overflowing issue

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -143,9 +143,13 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
-      padding: 32px;
-      column-gap: 64px;
+      justify-content: space-evenly;
+      padding: 32px 0;
+      column-gap: 20px;
+
+      .form__group-item {
+        max-width: 25%;
+      }
     }
   }
 }
